Processors for PDT, first preview.